--- a/Resources/stock_prediction_using_LSTM.ipynb
+++ b/Resources/stock_prediction_using_LSTM.ipynb
@@ -3296,7 +3296,12 @@
    "cell_type": "code",
    "execution_count": 68,
    "id": "a8f514b8-f527-412b-a846-a1ed6e6cf7c7",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -4244,7 +4249,12 @@
    "cell_type": "code",
    "execution_count": 74,
    "id": "c4938244-77ac-49bd-9b39-575e35ce3c36",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
