--- a/Resources/stock_prediction_using_LSTM.ipynb
+++ b/Resources/stock_prediction_using_LSTM.ipynb
@@ -5040,7 +5040,12 @@
    "cell_type": "code",
    "execution_count": 76,
    "id": "96025845-0624-4e96-bf70-f1e7d5643852",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -5187,7 +5192,12 @@
    "cell_type": "code",
    "execution_count": 77,
    "id": "3ff99f75-9247-442a-b24f-1c2f98647bba",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -5541,7 +5551,16 @@
    "id": "299ae881-e6fe-4243-8208-3700ba929632",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "            # Root Mean Squared Error (RMSE)\n",
+    "            rmse = np.sqrt(mse)\n",
+    "\n",
+    "            # R-Squared (R2)\n",
+    "            r2 = r2_score(y_test, y_predicted)\n",
+    "\n",
+    "            'rmse': rmse,\n",
+    "            'r2': r2\n"
+   ]
   }
  ],
  "metadata": {
